--- a/Create_MV_linux.yml
+++ b/Create_MV_linux.yml
@@ -20,18 +20,18 @@
 #        name: "{{ resource_group }}"
 #        location: "{{ location }}"
         
-#  - name: Create virtual network
-#    azure_rm_virtualnetwork:
-#      resource_group: "{{ resource_group }}"
-#      name: "{{ vm_name }}"
-#      address_prefixes: "10.0.0.0/16"
+  - name: Create virtual network
+    azure_rm_virtualnetwork:
+      resource_group: "{{ resource_group }}"
+      name: "{{ vm_name }}"
+      address_prefixes: "10.0.0.0/16"
       
-#  - name: Add subnet
-#    azure_rm_subnet:
-#      resource_group: "{{ resource_group }}"
-#      name: "{{ vm_name }}"
-#      address_prefix: "10.0.1.0/24"
-#      virtual_network: "{{ vm_name }}"
+  - name: Add subnet
+    azure_rm_subnet:
+      resource_group: "{{ resource_group }}"
+      name: "{{ vm_name }}"
+      address_prefix: "10.0.1.0/24"
+      virtual_network: "{{ vm_name }}"
       
   - name: Create public IP address
     azure_rm_publicipaddress:
