--- a/Create_MV_linux.yml
+++ b/Create_MV_linux.yml
@@ -61,7 +61,7 @@
     azure_rm_networkinterface:
       resource_group: "{{ resource_group }}"
       name: "{{ vm_name }}"
-      virtual_network: "{{ network }}"
+      virtual_network: "{{ vm_name }}"
       subnet: "{{ network }}"
       public_ip_name: "{{ vm_name }}"
       security_group: "{{ vm_name }}"
