--- a/Create_MV_linux.yml
+++ b/Create_MV_linux.yml
@@ -24,7 +24,7 @@
   - name: Create virtual network
     azure_rm_virtualnetwork:
       resource_group: "{{ resource_group }}"
-      name: "{{ vm_name }}"
+      name: "{{ network }}"
       address_prefixes: "10.0.0.0/16"
       
   - name: Add subnet
