--- a/Create_MV_linux.yml
+++ b/Create_MV_linux.yml
@@ -32,7 +32,7 @@
       resource_group: "{{ resource_group }}"
       name: "{{ subnetname }}"
       address_prefix: "10.0.1.0/24"
-      virtual_network: "{{ vm_name }}"
+      virtual_network: "{{ network }}"
       
   - name: Create public IP address
     azure_rm_publicipaddress:
